WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125164
ANGLE fails to build with trunk clang: unused constant kTraceBufferLen
https://bugs.webkit.org/show_bug.cgi?id=125164
Summary
ANGLE fails to build with trunk clang: unused constant kTraceBufferLen
Daniel Bates
Reported
2013-12-03 10:21:58 PST
The constant kTraceBufferLen is only referenced in code guarded by the macro define TRACE_ENABLED. And trunk clang identifies that this constant is unused otherwise. We should only define this constant when building with TRACE_ENABLED.
Attachments
Patch
(1.40 KB, patch)
2013-12-03 10:23 PST
,
Daniel Bates
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2013-12-03 10:23:39 PST
Created
attachment 218303
[details]
Patch
Daniel Bates
Comment 2
2013-12-03 10:33:28 PST
Filed ANGLE bug for this issue: <
https://code.google.com/p/angleproject/issues/detail?id=534
>.
Daniel Bates
Comment 3
2013-12-03 11:28:38 PST
Committed
r160018
: <
http://trac.webkit.org/changeset/160018
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug