ANGLE fails to build with trunk clang: unused constant kTraceBufferLen https://bugs.webkit.org/show_bug.cgi?id=125164 https://code.google.com/p/angleproject/issues/detail?id=534

Reviewed by Darin Adler.

Move the definition of the constant kTraceBufferLen under the macro
guard TRACE_ENABLED since it's only referenced in code guarded by
TRACE_ENABLED.

* src/compiler/debug.cpp:

Canonical link: https://commits.webkit.org/143258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160018 268f45cc-cd09-0410-ab3c-d52691b4dbfc